# online-shop-app

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
myshop/: __init__.py  celery.py  settings.py  urls.py
myshop/cart/: apps.py  cart.py  forms.py  urls.py  views.py
myshop/cart/templates/cart/: detail.html
myshop/coupons/: apps.py  urls.py  views.py
myshop/coupons/migrations/: 0001_initial.py
myshop/orders/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
myshop/orders/locale/en/LC_MESSAGES/: django.po
myshop/orders/locale/ru/LC_MESSAGES/: django.mo  django.po
myshop/orders/migrations/: 0001_initial.py  0002_order_stripe_id.py  0003_order_coupon_order_discount.py
myshop/orders/templates/admin/orders/order/: detail.html
myshop/orders/templates/orders/order/: create.html  pdf.html
myshop/payment/: apps.py  tasks.py  urls.py  views.py  webhooks.py
myshop/payment/templates/payment/: process.html
myshop/shop/: admin.py  apps.py  models.py  recommender.py  urls.py  views.py
myshop/shop/migrations/: 0001_initial.py  0002_translations.py
myshop/shop/templates/shop/: base.html
myshop/shop/templates/shop/product/: detail.html  list.html
