[tool.poetry]
name = "online-shop-app"
version = "0.1.0"
description = ""
authors = ["Anton Shefer <rezajkee@mail.ru>"]
readme = "README.md"
packages = [{include = "online_shop_app"}]

[tool.poetry.dependencies]
python = "^3.8.1"
Django = "^4.1.4"
django-extensions = "^3.2.1"
python-dotenv = "^0.21.0"
Pillow = "^9.3.0"
celery = "^5.2.7"
flower = "^1.2.0"
stripe = "^5.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
extend-exclude = '''
/(
  | migrations
)/
'''
